feat(handler):增加登录注销接口
